--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.6.0",
     "country-list": "^2.3.0",
     "jwt-decode": "^3.1.2",
+    "moments": "file:",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.3",
     "react-dom": "^17.0.2",
